Re-Fixed CSS in mobile format, there was actually a problem with the <ul>, it created a horizontal scroll bar, something we didn't want.

--- a/css/style.css
+++ b/css/style.css
@@ -484,12 +484,6 @@ footer nav ul li {
   footer nav ul:nth-child(3) {
     margin-bottom: 0; /* Adjust margin on small screens */
   }
-
-  footer nav ul:nth-child(1),
-  footer nav ul:nth-child(2),
-  footer nav ul:nth-child(3) {
-    width: 100%; /* Adjust width on small screens */
-  }
 }
 
 /****** Media queries ***********/
@@ -531,8 +525,6 @@ footer nav ul li {
 @media (min-width: 319.98px) and (max-width: 767.98px) {
   .hebergements-and-populaires {
     flex-direction: column; /* Stack sections vertically */
-    align-items: stretch; /* Stretch items vertically */
-    width: 100%;
   }
 
   .hebergements-and-populaires section {
@@ -540,7 +532,6 @@ footer nav ul li {
     border-radius: 0;
     padding: 1em;
     box-sizing: border-box; /* Section styling */
-    width: 100%;
   }
 
   .hebergements-and-populaires .populaires {
